--- a/ci/nginx.conf
+++ b/ci/nginx.conf
@@ -6,9 +6,10 @@ server {
     access_log  /var/log/nginx/host.access.log  main;
     error_log  /var/log/nginx/error.log  error;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+    location /ruoyi {
+        alias  /usr/share/nginx/html/ruoyi;
+        index  index.html;
+        try_files $uri $uri/ /ruoyi/index.html;
     }
 
     #error_page  404              /404.html;
